[package]
name = "tobytcp"
version = "0.11.0"
authors = ["Ryan Gorup"]
categories = ["tcp"]
keywords = ["tcp"]
repository = "https://github.com/gorup/tobytcp"
description = "A little library for sending messages over a raw tcp stream"
license-file = "LICENSE"
readme="README.md"

[dependencies]
either = "1.5.0"
